Add "s around searching request

--- a/_posts/2018-7-4-get-ddg.md
+++ b/_posts/2018-7-4-get-ddg.md
@@ -15,7 +15,7 @@ title: get-ddg
 ### Зачем?
 После того, как узнал, что у DuckDuckGo есть **Bang**, а это штука, которая нужна для того, чтобы быстро искать сразу на нужном сайте, захотел бахнуть простую команду, чтобы быстро искать.
 
-Например, если вам нужно найти информацию по пакету python, можно ввести в DuckDuckGo `!dpkg python`.
+Например, если вам нужно найти информацию по пакету python, можно ввести в DuckDuckGo "`!dpkg python`".
 Так вас перешлет сразу на [packages.debian.org](https://packages.debian.org/search?keywords=python) с поиском python.
 
 Конечно, тут случайно оказалось, что чистый восклицательный знак в bash передавать нельзя.
